# homecastr-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
homecastr/: __init__.py  client.py
homecastr/services/: __init__.py  aggregates.py  forecast.py  geographies.py  keys.py  usage.py
tests/: test_client.py  test_integration.py
