[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "homecastr"
version = "0.1.0"
description = "Python SDK for the Homecastr probabilistic home value forecast API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Homecastr", email = "api@homecastr.com" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-httpx>=0.30.0", "ruff>=0.4.0"]
notebooks = ["jupyter>=1.0.0", "matplotlib>=3.8.0", "h3>=4.0.0"]

[project.urls]
Homepage = "https://www.homecastr.com"
Repository = "https://github.com/homecastr/homecastr-python"
Documentation = "https://docs.homecastr.com"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
